--- a/main.tex
+++ b/main.tex
@@ -627,13 +627,12 @@ are introduced.
 \subsection{Stability of defection}
 
 The final theoretical result explored is the stability of defection. Defection is
-the dominant strategy in the one shot game and it can be proven to be an optimal
-strategy in given environments. 
+known to be the dominant action in the PD and it can be proven to be the dominant
+strategy for the IPD for given environments. In this manuscript we try to provide a
+condition for when defection is the best response in the IPD.
 
-In this manuscript we try to provide a condition for when defection is the
-best response. This will be done by considering equation~(\ref{eq:derivative_of_quadratic}).
-Let equation~(\ref{eq:derivative_of_quadratic}) for \(p_0 = (0, 0, 0, 0)\) given by,
-
+This will be done by considering equation~(\ref{eq:derivative_of_quadratic}).
+Let equation~(\ref{eq:derivative_of_quadratic}) for \(p_0 = (0, 0, 0, 0)\),
 
 \begin{equation}\label{eq:derivative_of_quadratic_zero}
     \begin{aligned}
@@ -646,13 +645,13 @@ The numerator \(\bar{c}a - c\bar{a}\) is given by,
 
 \[\input{tex/defection_matrix.txt}\]
 
-and \(\bar{a} ^ 2 = (-q_2 + q_4 + 1) ^ 2\) which is always positive. In order
+and the denominator \(\bar{a} ^ 2 = (-q_2 + q_4 + 1) ^ 2\), which is always positive. In order
 for defection to be the best response the derivative must have a negative
 sign at the point \(p_0\). That means that the utility is only
-decreasing after \(p_0\). The point \(p_0\) is by the edge of the feasible solution
-, thus points before that are not taken into acount.
+decreasing after \(p_0\). The point \(p_0\) is by the edge of the feasible solution space
+thus points before that are not taken into account.
 
-The sign of the derivative is given by the numerator, thus \(\bar{c}a - c\bar{a}\).
+Because \(\bar{a} ^ 2\) is always positive the sign of the derivative is given by \(\bar{c}a - c\bar{a}\).
 More specifically from equations,
 
 \begin{equation}\label{eq:defection_condition_one}
@@ -689,10 +688,34 @@ this is shown by numerical example summarized in Table~\ref{table:sign_of_deriva
 \label{table:sign_of_derivative}
 \end{table}
 
-Lets us consider a constrained version of the problem once again. Lets us
-assume that the opponent is the  a reactive player \(q=(q_1, q_2, q_1, q_2)\).
+For a tournament setting we substitute \(p_0\) in equation~(\ref{eq:mo_tournament_derivative}):
+
+\begin{equation}
+\sum_{i=1} ^ N (c^{(i)T} \bar{a}^{(i)} - \bar{c}^{(i)T} a^{(i)})
+\prod\limits_{\tiny\begin{array}{l} j=1 \\ j \neq i \end{array}} ^ N (\bar{a}^{(i)})^2
+\end{equation}
+
+The product term \(\prod\limits_{\tiny\begin{array}{l} j=1 \\ j \neq i \end{array}} ^ N (\bar{a}^{(i)})^2\)
+is known to always be positive. However the sign of the sum term 
+\(\sum_{i=1} ^ N (c^{(i)T} \bar{a}^{(i)} - \bar{c}^{(i)T} a^{(i)})\) can vary based
+on the transition probabilities of the opponents, as discussed above. A condition that
+must hold in order for defection to be stable in a tournament is that the sum term
+must be negative. The results are summarised by Lemma~\ref{}.
+
+\begin{lemma}
+    In a tournament of \(N\) players where \(q^(i) = (q_{1}^(i), q_{2}^(i), q_{3}^(i), q_{4}^(i))\)
+    defection is known to be a best response if the transition probabilities of the
+    opponents satisfy the condition:
+
+    \begin{equation}
+        \sum_{i=1} ^ N (c^{(i)T} \bar{a}^{(i)} - \bar{c}^{(i)T} a^{(i)}) <= 0.
+    \end{equation}
+\end{lemma}
+
+Moreover lets us consider a constrained version of the problem once again. Lets us
+assume that in an pairwise interaction the opponent is a reactive player \(q=(q_1, q_2, q_1, q_2)\).
 By substituting \(q_3=q_1\) and \(q_4=q_2\) equations (\ref{eq:defection_condition_one})
-and (\ref{eq:defection_condition_two}) are know re written as follow,
+and (\ref{eq:defection_condition_two}) are now re written as follow,
 
 \[\left[\begin{matrix}- q_{2} \left(4 q_{1} - 5 q_{2} - 1\right)\\
 \left(q_{2} - 1\right) \left(4 q_{1} - 5 q_{2} - 1\right)\end{matrix}\right]\]
@@ -713,7 +736,9 @@ Defection is the best responses of a memory one player \(p\) against a reactive
 player \(q\) if the transition probabilities of the opponent satisfy the
 condition:
 
-\[(\left(4 q_{1} - 5 q_{2} - 1\right)\]
+\begin{equation}
+    4 q_{1} - 5 q_{2} - 1 > 0
+\end{equation}
 \end{lemma}
 
 \section{Numerical Experiments}
