--- a/main.tex
+++ b/main.tex
@@ -30,7 +30,8 @@
 \newtheorem{lemma}[theorem]{Lemma}
 \def\arraystretch{1.5}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{Memory size in the Prisoner's Dilemma}
+\title{Stability of defection, optimisation pf strategy and the limits of memory in
+the Prisoner's Dilemma.}
 \author{Nikoleta E. Glynatsi \and Vincent Knight}
 \date{}
 
