change title of section two

--- a/main.tex
+++ b/main.tex
@@ -120,7 +120,7 @@ The ZD strategies attracted a lot of attention. It was stated that
 Dilemma''~\cite{Stewart2012}. In~\cite{Stewart2012} a very similar tournament to Axelrod's
 tournament is run including ZD strategies and a new set of ZD strategies the Generous
 ZD. One specific advantage of memory one strategies is their mathematical tractability.
-As described in Section~\ref{} %TODO fill this
+As described in Section~\ref{section:utility_against_mem_one}
 they can be represented completely as an element of \(\R^{4}\).
 
 Even so, ZD and memory one strategies have also received criticism. In~\cite{Harper2015},
@@ -140,7 +140,7 @@ strategies. This is achieved by comparing the performance of an optimal
 memory one strategy, for a given environment, with the performance of a more complex
 strategy that has a larger memory.
 
-\section{Methodology}
+\section{The utility against memory one players}\label{section:utility_against_mem_one}
 
 In~\cite{Nowak1989} a framework was introduced to study the interactions of memory
 one strategies modelled as a stochastic process, the work~\cite{Press2012} of is
